# Tic-tac-toe

./: CMakeLists.txt  README.md
include/: game.h  game_fwd.h  view.h
mytest/demo/: demo1.cpp  demo2.cpp  demo3.cpp
mytest/include/: mytest.h
mytest/src/: mytest.cpp  mytest_main.cpp
src/: View_general.cpp  game.cpp  game_test.cpp  main.cpp  view_cli_loud.cpp  view_cli_silent.cpp
